@@ -10,6 +10,9 @@ Version 3.0.0rc2 -
   This new expression has been added to the `urlExtractorNew.py` example, to show how
   it extracts URL fields into separate results names.
 
+- Fixed ParseFatalExceptions failing to override normal exceptions or expression
+  matches in MatchFirst expressions. Addresses issue #251, reported by zyp-rgb.
+
 - Fixed bug in which ParseResults replaces a collection type value with an invalid
   type annotation (changed behavior in Python 3.9). Addresses issue #276, reported by
   Rob Shuler, thanks.
